Thu May 16 19:49:26 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keybinding-properties.c (start_editing_cb): evil, evil
	hack to insta-edit.  Should be removed for GTK 2.2
	(keybinding_key_changed_foreach): notify when we update the tree.

2002-05-10  Jody Goldberg <jody@gnome.org>

	* gnome-keybinding-properties.glade : Merge in the atk patch.

2002-05-09  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-keybindings-properties.c (accel_edited_callback): Mark
	a string for translation.
	
2002-05-06  Anders Carlsson  <andersca@gnu.org>

	* gnome-keybinding-properties.c (get_wm_name): It's true that
	g_utf8_validate doesn't like '\000' in strings, but that should
	be fixed in the programs that set the hints. (Eg Metacity).

Sun May  5 22:15:18 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-keybinding-properties.c (get_wm_name): g_utf8_validate
	doesn't like the '\000' in strings.

2002-05-06  Anders Carlsson  <andersca@gnu.org>

	* eggcellrendererkeys.c: (grab_key_callback), (ungrab_stuff),
	(pointless_eventbox_start_editing),
	(egg_cell_renderer_keys_start_editing):
	* eggcellrendererkeys.h:
	Update to latest eggcellrendererkeys.
	
	* gnome-keybinding-properties.c: (get_wm_name),
	(is_metacity_running), (update_wm_window),
	(wm_window_event_filter), (initialize_wm_handling),
	(binding_from_string), (accel_set_func), (keybinding_key_changed),
	(clear_old_model), (count_rows_foreach), (should_show_key),
	(append_keys_to_tree), (reload_key_entries),
	(key_entry_controlling_key_changed), (disable_collapsing_cb),
	(setup_dialog), (main):
	* gnome-keybinding-properties.glade:
	Hard-code the list of keybindings. Add Metacity keybindings 
	and code for handling WM changes.
	
2002-04-26  Havoc Pennington  <hp@pobox.com>

	* gnome-keybinding-properties.c (append_keys_to_tree): fix 
	non-use of accessor functions.

Fri Apr 19 20:07:11 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keybinding-properties.c (append_keys_to_tree):