@@ -1,3 +1,12 @@
+Sat May 18 18:25:02 2002  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-keybinding-properties.c: (append_keys_to_tree),
+	(setup_dialog): Add default icon.  Don't disalow closing
+	expanders.  Implement ui-review suggestions.
+
+	* gnome-keybinding-properties.glade: Implement ui-review
+	suggestions.
+
 Thu May 16 19:49:26 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-keybinding-properties.c (start_editing_cb): evil, evil
